src/test/ui/typeck/hang-in-overflow.stderr
error[E0275]: overflow evaluating the requirement `...`
  --> $DIR/hang-in-overflow.rs:8:5
   |
LL |     foo::<_>();
   |     ^^^^^^^^
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`hang_in_overflow`)
   = note: required for `...` to implement `...`
   = note: 127 redundant requirements hidden
   = note: required for `...` to implement `...`
note: required by a bound in `foo`
  --> $DIR/hang-in-overflow.rs:14:28
   |
LL | fn foo<B>()
   |    --- required by a bound in this
LL | where
LL |     Vec<[[[B; 1]; 1]; 1]>: PartialEq<B>,
   |                            ^^^^^^^^^^^^ required by this bound in `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0275`.
